--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ lxml = "^4.6.3"
 pillow = "^8.3.1"
 cairosvg = "^2.5.2"
 pytest = "^6.2.4"
+numpy = "^1.24.3"
+matplotlib = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
